# memory_agent

./: README.md  docker-compose.yml
client/: client-db.py  client-memory-auto.py  client-memory-ops.py  client-memory.py  client-model.py  client-rag-reliable.py  client-rag.py  requirements-minimal.txt  requirements.txt
server/: AUTONOMOUS_MEMORY_AGENT.md  client-autonomous.py  client-comparison.md  client-memory-enhanced.py  client_test_memory.py  docker-compose.yml  fix_db.sql  fix_db_dimensions.py  memory-agent-improvements.md  memory-client-examples.md  quick_test_chat.py
server/mcp-db/: Dockerfile  init.sql  mcp_instance.py  pyproject.toml  server.py  server_asgi_fixed.py
server/mcp-db/src/database/: connection.py
server/mcp-db/tools/: tool_db_core.py  tool_list.txt
server/mcp-memory/: .env  AUTONOMOUS_ARCHITECTURE.md  Dockerfile  ENHANCED_INTELLIGENCE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  STORAGE_UPDATE.md  VECTOR_INDEX_OPTIMIZATION.md  __init__.py  demo_memory_agent.py  init_user_memories.sql  mcp_instance.py  server.py  (+8 more)
server/mcp-model/: Dockerfile  README.md  mcp_instance.py  pyproject.toml  server.py  server_asgi_fixed.py
server/mcp-model/tools/: tool_model.py
server/mcp-rag/: Dockerfile  mcp_instance.py  pyproject.toml  server.py  server_asgi_fixed.py  server_fixed.py
server/mcp-rag/src/: config.py
server/mcp-rag/src/clients/: __init__.py  base_client.py  base_client_old.py  db_client.py  model_client.py
server/mcp-rag/tools/: __init__.py  tool_list.txt  tool_rag_orchestrator.py  tool_rag_orchestrator_backup.py  tool_rag_orchestrator_sse.py
(+31 files in other folders)
