[project]
name = "mcp-model"
version = "0.1.0"
description = "SSE-based MCP Server and Client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9.0",
    "argparse>=1.4.0",
    "httpx>=0.28.1",
    "mcp[cli]==1.6.0",
    "python-dotenv>=1.0.1",
    "requests",
    "uvicorn",
    "starlette",
    "numpy", 
    "soundfile"
]