[project]
name = "rag-mcp"
version = "1.0.0"
description = "RAG orchestration MCP server"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mcp==1.8.0",
    "python-dotenv==1.0.0",
    "aiohttp>=3.9.0",
    "starlette>=0.37.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["mcp_instance*", "server*", "src*", "tools*"]